[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/textures/altas/enemys/bug/bug_up.tres" type="Texture" id=1]
[ext_resource path="res://assets/textures/altas/enemys/bug/bug_down.tres" type="Texture" id=2]
[ext_resource path="res://game_objects/enimies/bug/scripts/bug.gd" type="Script" id=3]
[ext_resource path="res://components/hurt_hit_box/hurt_box/objs/hurt_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/hurt_hit_box/hit_box/objs/hit_box.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "move",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 2.5 )

[node name="bug" type="Node2D"]
script = ExtResource( 3 )
velocity = 20

[node name="texture" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "move"
playing = true
offset = Vector2( 0, -8 )

[node name="on_floor" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="is_wall" type="RayCast2D" parent="."]
position = Vector2( 6, -4 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="hurt_box" parent="." instance=ExtResource( 4 )]
_name = "bug"
_filter = [ "bug", "flyenemy" ]
_hurt = 3

[node name="shape" type="CollisionShape2D" parent="hurt_box"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="hit_box" parent="." instance=ExtResource( 5 )]
_name = "bug"
_filter = [ "bug", "flyenemy" ]
_hit = 1

[node name="shape" type="CollisionShape2D" parent="hit_box"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[connection signal="at_hurt_factor" from="hurt_box" to="." method="_on_hurt_box_at_hurt_factor"]
